src/objects/school__c/school__c.object-meta.xml
<CustomObject>
    <label>school</label>
    <nameField>
        <label>school Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>schools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>