src/objects/school__c/fields/co__c.field-meta.xml
<CustomField>
    <fullName>co__c</fullName>
    <label>subjects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>english</fullName>
            </value>
            <value>
                <fullName>telugu</fullName>
            </value>
            <value>
                <fullName>maths</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>