src/objects/school__c/fields/Count_Of_S__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_S__c</fullName>
    <label>Count Of S</label>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>