src/objects/school__c/fields/count_of_student__c.field-meta.xml
<CustomField>
    <fullName>count_of_student__c</fullName>
    <label>count of student</label>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>